--- a/seckill/src/main/resources/application.yaml
+++ b/seckill/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
-    password: 123456
+    password:
     jedis:
       pool:
         #连接池最大连接数（使用负值表示没有限制）
@@ -15,3 +15,5 @@ spring:
         min-idle: 0
     #连接超时时间（毫秒）
     timeout: 30000
+server:
+  port: 18080
